kubernetes/apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-app-ns
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 058264082349.dkr.ecr.us-east-1.amazonaws.com/my-app:6c4cec095ecb8157381e381ddc0886b5ed022445
        ports:
        - containerPort: 8080
        resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
